Add a tags page

--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
             movement, <a href="https://learnenough.com/email">sign up for our official email list</a> now.
         </p>
 
+        <a target="_blank" rel="noopener" style="text-decoration: none;" href="https://twitter.com/learnenough">
+            <img src="images/small_twitter_logo.png">
+        </a>
+        You should follow Learn Enough on Twitter
+        <a target="_blank" rel="noopener" href="https://twitter.com/learnenough">here</a>.
+
         <p>
             HTML was created by the original "web developer", computer scientifist
             <a href="https://en./wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>.
             Its not ture that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.
         </p>
-
+        
+        <a rel="noopener" target="_blank" href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
         <img src="images/kitten.jpg" alt="An adorable kitten">
+        </a>
 
         <h2>Background</h2>
 
