--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         
-        <div>
-            <a href="index.html">Home</a>
-            <a href="moby_dick.html">Moby Dick</a>
-            <a href="tags.html">HTML Tags</a>
+        <div style="text-align: right;">
+            <a href="index.html" style="color: blue; text-decoration: none;">Home</a>
+            <a href="tags.html" style="color: blue; text-decoration: none; margin-left: 10px;">HTML Tags</a>
+            <a href="moby_dick.html" style="color: blue; text-decoration: none; margin-left: 10px;">Moby Dick</a>
         </div>
 
         <header>
@@ -177,6 +177,39 @@
                 <td><li>list</li></td>
             </tr>
         </table>
+        </div>
+
+        <header>
+            <h2>Document tags</h2>
+        </header>
+
+        <div>
+            <table>
+                <tr>
+                    <th>Tag</th>
+                    <th>Property</th>
+                </tr>
+
+                <tr>
+                    <td>html</td>
+                    <td>declare the document langage</td>
+                </tr>
+
+                <tr>
+                    <td>head</td>
+                    <td>declare the uperside of the page</td>
+                </tr>
+
+                <tr>
+                    <td>body</td>
+                    <td>declare the other part of the page</td>
+                </tr>
+
+                <tr>
+                    <td>title</td>
+                    <td>declare the title of the page</td>
+                </tr>
+            </table>
         </div>
 
     </body>
