--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Learn Enough to Be Dangerous</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main.css"
+        <link rel="stylesheet" href="css/main.css">
 
     </head>
     <body>
@@ -30,7 +30,7 @@
             <img src="images/small_twitter_logo.png">
         </a>
         You should follow Learn Enough on Twitter
-        <a target="_blank" rel="noopener" href="https://twitter.com/learnenough">here</a>.
+        <a target="_blank" rel="noopener" href="https://twitter.com/learnenough" class="image-link">here</a>.
 
         <p>
             HTML was created by the original "web developer", computer scientifist
@@ -70,7 +70,7 @@
                 <a href="https://www.learnenough.com/">learnenough.com</a>
             </p>
 
-        <h2>Founders</h2>
+        <h2 id="founders">Founders</h2>
 
             <p>
                 Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
