--- a/tags.html
+++ b/tags.html
@@ -3,11 +3,12 @@
     <head>
         <title>HTML Tags</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         
         <div style="text-align: right;">
-            <a href="index.html" style="color: blue; text-decoration: none;">Home</a>
+            <a href="index.html" class="image-link">Home</a>
             <a href="tags.html" style="color: blue; text-decoration: none; margin-left: 10px;">HTML Tags</a>
             <a href="moby_dick.html" style="color: blue; text-decoration: none; margin-left: 10px;">Moby Dick</a>
         </div>
