--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
         </div>
 
-        <h1>The Learn Enough Story</h1>
+        <h1>The Learn Enough Story test</h1>
 
         <p>Learn Enough to Be Dangerous is a leader in the movement to teach
             <em>technical sophistication</em>, the seemingly magical ability to take
